@@ -37,7 +37,7 @@ RateUnitMode 1
 
 # output style
 # 0 = minimal & narrow, 1 = bar column visible
-# 2 = same as 1 except rate in summary and weekly
+# 2 = same as 1 except rate in summary
 # 3 = rate column visible
 OutputStyle 3
 
@@ -67,8 +67,8 @@ MaxBWethnone 8
 Sampletime 5
 
 # default query mode
-# 0 = normal, 1 = days, 2 = months, 3 = top10
-# 4 = exportdb, 5 = short, 6 = weeks, 7 = hours
+# 0 = normal, 1 = days, 2 = months, 3 = top, 5 = short
+# 7 = hours, 8 = xml, 9 = one line, 10 = json
 QueryMode 0
 
 # filesystem disk space check (1 = enabled, 0 = disabled)
