@@ -150,14 +150,14 @@ the first day. Value range: 1..28 (vnstat and vnstatd only)
 Modify the content and style of text outputs. 0 = minimal and
 narrow output for terminal with limited width, 1 = normal output with
 bar column visible, 2 = same as 1 except rate is visible in summary
-and weekly outputs, 3 = rate column is visible in all outputs where it
-is supported. (vnstat and vnstati only)
+output, 3 = rate column is visible in all outputs where it is supported.
+(vnstat and vnstati only)
 
 .TP
 .B QueryMode
 Default query mode when no parameters are given. 0 = normal, 1 = days,
-2 = months, 3 = top10, 4 = exportdb, 5 = short, 6 = weeks, 7 = hours and
-8 = xml. (vnstat only)
+2 = months, 3 = top, 5 = short, 7 = hours, 8 = xml, 9 = one line
+and 10 = json. (vnstat only)
 
 .TP
 .B RateUnit
