@@ -237,8 +237,6 @@ int main(int argc, char *argv[]) {
 				}
 				currentarg++;
 			}
-		} else if ((strcmp(argv[currentarg],"--exportdb")==0) || (strcmp(argv[currentarg],"--dumpdb")==0)) {
-			cfg.qmode=4;
 		} else if (strcmp(argv[currentarg],"--oneline")==0) {
 			cfg.qmode=9;
 			if (currentarg+1<argc && argv[currentarg+1][0]!='-') {
@@ -503,7 +501,6 @@ void showlonghelp(PARAMS *p)
 	printf("         -s,  --short           use short output\n");
 	printf("         -ru, --rateunit       swap configured rate unit\n");
 	printf("         --oneline             show simple parseable format\n");
-	printf("         --exportdb            dump database in text format\n");
 	printf("         --json                show database in json format\n");
 	printf("         --xml                 show database in xml format\n");
 
